# datatoys-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
assets/: notebook-example.html
datatoys/: __init__.py
tests/: test_datasets.py  test_datatoys.py
